--- a/MAPEH.html
+++ b/MAPEH.html
@@ -6,103 +6,42 @@
   <title>Music-Ibanez, Hiso</title>
   
 </head>
- 
-<body background="higuys.jpg" style="background-repeat:no-repeat;background-size: 100%">
+ <center>
+ <img src="Music.png" width="1680" height="350">
+</center>
+
 
 <center>
-<h1><br>Music</h1>
+<iframe width="1036" height="583" src="https://www.youtube.com/embed/pEjUy7Fhmbc" title="MUSIC FINAL OUTPUT" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<html>
-<head>
-<style>
-body {
-  font-family: Verdana, sans-serif;
-}
-<style>
-</head>
-<body>
 
-<html>
-<head>
+<link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
+<title>Page Title</title>
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px;
-}
-
-#myBtn {
-  display: none;
-  position: fixed;
-  bottom: 20px;
-  right: 30px;
-  z-index: 99;
-  font-size: 18px;
-  border: none;
-  outline: none;
-  background-color: red;
-  color: white;
-  cursor: pointer;
-  padding: 15px;
-  border-radius: 4px;
-}
-
-#myBtn:hover {
-  background-color: #555;
-}
-</style>
-</head>
-<body>
-
-
-<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-
-<script>
-// Get the button
-let mybutton = document.getElementById("myBtn");
-
-// When the user scrolls down 20px from the top of the document, show the button
-window.onscroll = function() {scrollFunction()};
-
-function scrollFunction() {
-  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-    mybutton.style.display = "block";
-  } else {
-    mybutton.style.display = "none";
-  }
-}
-
-// When the user clicks on the button, scroll to the top of the document
-function topFunction() {
-  document.body.scrollTop = 0;
-  document.documentElement.scrollTop = 0;
-}
-</script>
-
-
-
-<html>
-<body>
-
-<video width="1000" height="1000" controls>
-  <source src="MUSICET3.mp4" type="video/mp4">
-</video>
-
-</body>
-</html>
-
-
-
+/* Style the body */
+ 
+  
+  
+*{
+ font-family: 'Quicksand';
+ 
+ 
+ 
 <html>
 <head>
 <style>
 p.one {
   border-style: solid;
-  border-color: gray;
+  border-color: #779ECB;
 }
 </style>
 </head>
 <body>
+
+<p class="one"></p>
+
 
 
 <html>
@@ -110,7 +49,7 @@ p.one {
 <style>
 div {
   border: 1px solid black;
-  background-color: lightpink;
+  background-color: white;
   padding-top: 50px;
   padding-right: 25px;
   padding-bottom: 50px;
@@ -120,24 +59,54 @@ div {
 </head>
 <body>
 
+<body style="background-color:#A7C7E7;">
+
+
 <html>
 <head>
 <style>
 img {
-  border-radius: 8px;
+  border-radius: 4px;
 }
 </style>
 </head>
 <body>
 
-<img src="qwe.jpg" width="500" height="300">
 
+
+<html>
+<head>
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+</style>
+</head>
+<body>
+
+
+<div class="row">
+  <div class="column">
+    <img src="sofiapic.jpg" style="width:40%">
+  </div>
 <h2>Sofia Ibanez</h2>
 
 <div>Sofia likes the color Purple, she doesn't like Ampalaya/bitter gourd, she prefers going outside and being with nature, and her favorite song of all time is Nothing's Gonna Stop Us Now by Starship.
 She plays games when she's free, she always hangs out with her cousins, and is an introvert. And she hopes that someday she will be able to help people out.
-
-</div>
+ </div>
 
 
 <html>
@@ -145,20 +114,22 @@ She plays games when she's free, she always hangs out with her cousins, and is a
 <style>
 p.one {
   border-style: solid;
-  border-color: gray;
+  border-color: #779ECB;
 }
 </style>
 </head>
 <body>
 
+<p class="one"></p>
 
-<html>
-<head>
+
 <style>
+<head>
+<body>
 
- div {
+div {
 border: 1px solid black;
-background-color: #E6E6FA;
+background-color: white;
 padding-top:  50px;
 padding-right:  25px;
 padding-bottom:  50px;
@@ -179,13 +150,13 @@ img {
 </head>
 <body>
 
-<img src="qwqq.jpg" width="500" height="400">
-
+<div class="column">
+    <img src="danaiapretty.jpg" style="width:40%">
+  </div>
 
 <h2>Danaia Hiso</h2>
 
-</center>
-<div>I describe myself as an extraversion person due to the fact that I'm casually a sociable and a friendly person. Extraversion describes my whole personality because of the fact that I'm a very talkative person and outgoing. This trait/personality really helps me with making friends and making my life exciting day by day. My love for chatting sometimes is an issue for me, because some people that I talk to are really busy people and I bother them sometimes with my bickering but as I’m growing older I don’t chat a lot anymore due to stress and being alone all the time, as I grow old, I find more peace in quiet places rather than being
+<div> I describe myself as an extraversion person due to the fact that I'm casually a sociable and a friendly person. Extraversion describes my whole personality because of the fact that I'm a very talkative person and outgoing. This trait/personality really helps me with making friends and making my life exciting day by day. My love for chatting sometimes is an issue for me, because some people that I talk to are really busy people and I bother them sometimes with my bickering but as I’m growing older I don’t chat a lot anymore due to stress and being alone all the time, as I grow old, I find more peace in quiet places rather than being
 <br>chatty but I’m still an extraversion around people who I’m close with. Having an extraversion trait is great because it helps me a lot in making friends. </div>
 
 
@@ -193,3 +164,6 @@ img {
   </body>
   
   </html>
+  
+  
+ 
